--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,14 +8,15 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "eslint-plugin-prettier"],
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/prop-types": "off",
