--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["cypress", "node", "@testing-library/cypress"],
+    "paths": {
+      "@cypress/*": ["../cypress/support/*"],
+      "@interceptors/*": ["../cypress/interceptors/*"],
+      "@fixtures/*": ["../cypress/fixtures/*"]
+    }
   },
   "include": ["src"]
 }
