--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest/globals": true
   },
   "extends": [
     "eslint:recommended",
@@ -16,7 +17,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "eslint-plugin-prettier"],
+  "plugins": ["react", "eslint-plugin-prettier", "jest"],
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/prop-types": "off",
