--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-burger",
-  "homepage": "https://Chakrygin-Maxim.github.io/stellar-burger/",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
